--- a/HiLoGame_Client/MainWindow.xaml
+++ b/HiLoGame_Client/MainWindow.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox Name="IPAddress" HorizontalAlignment="Left" Margin="235,89,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="PortNumber"  HorizontalAlignment="Left" Margin="235,149,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="UserName" HorizontalAlignment="Left" Margin="235,203,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label Content="IP address" HorizontalAlignment="Left" Margin="154,85,0,0" VerticalAlignment="Top"/>
+        <Label Content="Port number" HorizontalAlignment="Left" Margin="142,145,0,0" VerticalAlignment="Top"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="176,199,0,0" VerticalAlignment="Top"/>
+        <Button Content="Start game" HorizontalAlignment="Left" Margin="294,257,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+
     </Grid>
 </Window>
