--- a/HiLoGame_Client/MainWindow.xaml
+++ b/HiLoGame_Client/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HiLoGame_Client.MainWindow"
+<Window x:Class="HiLoGame_Client.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,13 +7,28 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox Name="IPAddress" HorizontalAlignment="Left" Margin="235,89,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="PortNumber"  HorizontalAlignment="Left" Margin="235,149,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="UserName" HorizontalAlignment="Left" Margin="235,203,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Label Content="IP address" HorizontalAlignment="Left" Margin="154,85,0,0" VerticalAlignment="Top"/>
-        <Label Content="Port number" HorizontalAlignment="Left" Margin="142,145,0,0" VerticalAlignment="Top"/>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="176,199,0,0" VerticalAlignment="Top"/>
-        <Button Content="Start game" HorizontalAlignment="Left" Margin="294,257,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Label Content="Hi-Lo Game" HorizontalAlignment="Left" Height="54" Margin="80,32,0,0" VerticalAlignment="Top" Width="220" FontSize="36" FontFamily="Segoe UI Variable Display Semibold"/>
+
+
+        <Label HorizontalAlignment="Left" Margin="80,112,0,0" VerticalAlignment="Top" Content="Name" FontWeight="Bold"/>
+        <TextBox Name="IPAddress" HorizontalAlignment="Left" Margin="80,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20"/>
+
+        <Label HorizontalAlignment="Left" Margin="240,112,0,0" VerticalAlignment="Top">
+            <Run FontWeight="Bold" Text="IP Address"/>
+        </Label>
+        <TextBox Name="Name" HorizontalAlignment="Left" Margin="240,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20"/>
+
+        <Label HorizontalAlignment="Left" Margin="400,112,0,0" VerticalAlignment="Top">
+            <Run FontWeight="Bold" Text="Port Number"/>
+        </Label>
+        <TextBox Name="PortNumber" HorizontalAlignment="Left" Margin="400,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20"/>
+
+        <Button Content="Connect" HorizontalAlignment="Left" Margin="560,138,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="20" Width="80"/>
+        <Rectangle Height="140" Margin="80,192,80,0" Stroke="Black" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Instructions" Margin="0,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="110" Width="596" HorizontalAlignment="Center"/>
+        <Button Content="Make a Guess" HorizontalAlignment="Left" Margin="560,356,0,0" VerticalAlignment="Top" Width="80" Height="24" IsEnabled="False"/>
+        <TextBox HorizontalAlignment="Left" Margin="400,358,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20" IsEnabled="False"/>
+        <Label Content="Guess the number here:" HorizontalAlignment="Left" Margin="80,352,0,0" VerticalAlignment="Top" Height="32" Width="280" FontWeight="Bold" HorizontalContentAlignment="Right" FontSize="16"/>
 
     </Grid>
 </Window>
