--- a/HiLoGame_Client/MainWindow.xaml
+++ b/HiLoGame_Client/MainWindow.xaml
@@ -30,7 +30,7 @@
         <Button Name="GuessNumberButton" Content="Make a Guess" HorizontalAlignment="Left" Margin="540,356,0,0" VerticalAlignment="Top" Width="80" Height="24" IsEnabled="False" Click="GuessNumberButton_Click"/>
         <TextBox Name="GuessNumber" HorizontalAlignment="Left" Margin="400,358,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="20" IsEnabled="False"/>
         <Label Content="Guess the number here:" HorizontalAlignment="Left" Margin="80,352,0,0" VerticalAlignment="Top" Height="32" Width="280" FontWeight="Bold" HorizontalContentAlignment="Right" FontSize="16"/>
-        <Button x:Name="StopButton" Content="Stop Game" HorizontalAlignment="Left" Margin="640,356,0,0" VerticalAlignment="Top" Width="80" Height="24" IsEnabled="False" Click="StopButton_Click"/>
+        <Button x:Name="StopButton" Content="Stop Game" HorizontalAlignment="Left" Margin="640,356,0,0" VerticalAlignment="Top" Width="80" Height="24" Click="StopButton_Click"/>
 
     </Grid>
 </Window>
